[package]
name = "emv"
version = "0.1.0"
authors = ["Caio Tavares <caio.tavares11@gmail.com>"]
license = "MIT"
description = "emv is a tool to send/receive APDU commands with smartcards that follow EMV specification"
readme = "README.md"
repository = "https://github.com/caiotavares/emv"
keywords = ["emv", "apdu", "pcsc", "mastercard", "visa"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
pcsc = { version = "2.4.0" }
structopt = "0.3.21"
hex = "0.4.2"
